# fundus_image_manager_base

./: .env.example  .gitignore  AGENTS.md  DETAILS.md  QWEN.md  README.md  SUMMARY.md  app.py  initialize.py  job_store.py  main.py  models.py  ocr_extraction.py  package.json  process_pdfs.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_env_and_npm.py  worker.py
account/: __init__.py  routes.py
admin/: __init__.py  routes.py
audit/: __init__.py  routes.py
auth/: __init__.py  roles.py  routes.py  security.py  utils.py
direct_uploads/: __init__.py  api.py  dashboard.py  edit_image.py  edit_upload.py  jobs.py  paths.py  routes.pyold.txt  save_image.py  upload.py  utils.py
docs/: BUILD_THEMES.md  app.md  main.md  models.md  ocr_extraction.md  process_pdfs.md
glaucoma/: __init__.py  routes.py
grading/: __init__.py  routes.py
jobs/: __init__.py  routes.py
media/: __init__.py  routes.py
plan/: features_list.md
preprocess/: __init__.py  anonymize_image.py
reports/: __init__.py  routes.py
screenings/: __init__.py  routes.py
scripts/: USERS.md  assign_roles.py  create_user.py  init_direct_image_uploads.py  migrate_anonymization_verifications.py  migrate_capture_date_dt.py  migrate_direct_uploads.py  migrate_direct_uploads_edited_image.py  migrate_drop_image_grading_unique.py  migrate_eye_side.py  migrate_image_grading_graded_for.py  migrate_job_uploader.py  migrate_user_upload_fields.py  migrate_uuid.py  migrate_verification.py  migrations.md  setup_db.py
templates/: base.html  home.html  style_guide.html
tests/: conftest.py  (+6 more)
(+70 files in other folders)
