[project]
name = "fundus-img-xtract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pymupdf>=1.26.0",
    "pypdf>=5.6.0",
    "pytesseract>=0.3.13",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
